# CelluarPathCompose

./: .gitignore  CMakeLists.txt  main.cpp  qresource.qrc  readme.md
libs/a-star/: CMakeLists.txt  main.cpp
libs/a-star/source/: AStar.cpp  AStar.hpp
src/: CMakeLists.txt  Cellconnection.cpp  Cellconnection.h  MyCanvas.qml  PathFinderCalculator.cc  PathFinderCalculator.h  PolyBuilder.cpp  PolyBuilder.h  Toolbar.qml  decomposer.cpp  decomposer.h  main.qml  path_generator.cpp  path_generator.h  segmentation.cpp  segmentation.h  utils.h
